--- a/src/app/navigation/header/header.component.css
+++ b/src/app/navigation/header/header.component.css
@@ -11,14 +11,15 @@ li {
 a {
   text-decoration: none;
   color: white;
-  margin-right: 5px;
+  margin-right: 5px !important;
 }
-. spacer {
+
+.spacer {
   flex: 1 1 auto;
 }
 
 ul {
-  /* order items next to one another */
+  /*order items next to one another*/
   display: flex;
   list-style: none;
 }
