--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -1,28 +1,20 @@
-<form (submit)="onLogin()">
-  <h1>Login Page</h1>
-  <input type="text" [(ngModel)]="username" placeholder="Username" required>
-  <input type="password" [(ngModel)]="password" placeholder="Password" required>
-  <button type="submit">Login</button>
-</form>
+<mat-spinner *ngIf="isLoading"></mat-spinner>
+<mat-card *ngIf="!isLoading">
+  <form (submit)="onLogin(loginForm)" #loginForm="ngForm">
 
-<!--
-<div class="login-container">
-  <h2>Login</h2>
-  <form (ngSubmit)="Signin()">
-    <mat-form-field >
-      <mat-label>Email</mat-label>
-      <input matInput type="email" [(ngModel)]="email" name="email" required />
+    <mat-form-field>
+      <input matInput name="email" type="email" placeholder="E-Mail" ngModel email required autocomplete="current-email"
+             #emailInput="ngModel">
+      <mat-error *ngIf="emailInput.invalid">E-Mail is a required field</mat-error>
     </mat-form-field>
 
-    <mat-form-field appearance="fill">
-      <mat-label>Password</mat-label>
-      <input matInput type="password" [(ngModel)]="password" name="password" required />
+    <mat-form-field>
+      <input matInput name="password" type="password" placeholder="Password" ngModel required autocomplete="current-password"
+             #passwordInput="ngModel">
+      <mat-error *ngIf="passwordInput.invalid">Password is a required field</mat-error>
     </mat-form-field>
 
     <button mat-raised-button color="primary" type="submit">Login</button>
 
-    &lt;!&ndash; Display error message if available &ndash;&gt;
-    <p *ngIf="errorMessage" class="error">{{ errorMessage }}</p>
   </form>
-</div>
--->
+</mat-card>
