--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -1,17 +1,23 @@
 <mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-card *ngIf="!isLoading">
-  <mat-card-title>Signup</mat-card-title>
-  <form (ngSubmit)="onSignup()">
+  <form (submit)="onSignup(signupForm)" #signupForm="ngForm">
+
     <mat-form-field>
-      <input matInput placeholder="Username" [(ngModel)]="username" name="username" required />
+      <input matInput type="email" name="email" placeholder="E-Mail" ngModel email required autocomplete="current-email"
+             #emailInput="ngModel">
+      <mat-error *ngIf="emailInput.invalid">E-Mail is a required field</mat-error>
     </mat-form-field>
+
     <mat-form-field>
-      <input matInput placeholder="Password" [(ngModel)]="password" name="password" type="password" required />
+      <input matInput type="password" name="password" placeholder="Password" ngModel required autocomplete="current-password"
+             #passwordInput="ngModel">
+      <mat-error *ngIf="passwordInput.invalid">Password is a required field</mat-error>
     </mat-form-field>
+
     <button mat-raised-button color="primary" type="submit">Signup</button>
+
   </form>
 </mat-card>
-<mat-spinner *ngIf="isLoading"></mat-spinner>
 
 
 
@@ -31,7 +37,7 @@
 
 <!--<form (submit)="onSignup()">
   <h1>Signup Page</h1>
-  <input type="text" [(ngModel)]="username" placeholder="Username" required>
+  <input type="text" [(ngModel)]="email" placeholder="email" required>
   <input type="password" [(ngModel)]="password" placeholder="Password" required>
   <button type="submit">Signup</button>
 </form>-->
@@ -49,7 +55,7 @@
 
 
 
-<!--<div class="signup-container">
+<!--<div class="signup.js-container">
   <h2>Signup</h2>
   <form (ngSubmit)="onSignup()">
     <mat-form-field appearance="fill">
