--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,19 +1,21 @@
-<mat-toolbar color="primary" >
-
+<mat-toolbar color="primary">
   <span routerLink="/"><a>My Application</a></span>
   <span class="spacer"></span>
   <ul>
-    <li >
-      <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
+    <!--<li *ngIf="userIsAuthenticated">-->
+      <a mat-button routerLink="/create" routerLinkActive="active">New Post</a>
+    <li>
     </li>
-    <li >
-      <a mat-button routerLink="/login">Login</a>
+    <!--<li *ngIf="userIsAuthenticated">-->
+    <a mat-button routerLink="/post" routerLinkActive="active">Post</a>
+    <li *ngIf="!userIsAuthenticated">
+      <a mat-button routerLink="/login" routerLinkActive="active">Login</a>
     </li>
-    <li >
-      <a mat-button routerLink="/signup">Signup</a>
+    <li *ngIf="!userIsAuthenticated">
+      <a mat-button routerLink="/signup" routerLinkActive="active">Signup</a>
     </li>
-    <li >
-      <button mat-button (click)="onLogout()">Signout</button>
+    <li *ngIf="userIsAuthenticated">
+      <button mat-button (click)="onLogout()">Logout</button>
     </li>
   </ul>
 </mat-toolbar>
@@ -37,16 +39,16 @@
 <nav>
   <ul>
     <li *ngIf="!userIsAuthenticated">
-      <a routerLink="/login">Login</a>
+      <a routerLink="/login.js">Login</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a routerLink="/posts">Login</a>
+      <a routerLink="/posts.js">Login</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
       <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a routerLink="/signup">Signup</a>
+      <a routerLink="/signup.js">Signup</a>
     </li>
     <li *ngIf="userIsAuthenticated">
       <button (click)="onLogout()">Logout</button>
