--- a/src/app/navigation/footer/footer.component.html
+++ b/src/app/navigation/footer/footer.component.html
@@ -1,6 +1,26 @@
-<footer class ="CSS">
-  <div >
-    Copyright 2024 All rights reserved | Peter Gandy
-  </div >
-  </footer >
+<!--
+<html lang="en">
 
+<head>
+  &lt;!&ndash; CSS Libraries &ndash;&gt;
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" />
+
+  &lt;!&ndash; Custom CSS &ndash;&gt;
+  <link rel="stylesheet" href="footer.component.html">
+</head>
+
+<body>
+&lt;!&ndash; Footer &ndash;&gt;
+<footer class="footer-container">
+  <div class="footer-content">
+    &copy; 2024 All rights reserved | Peter Gandy
+  </div>
+</footer>
+
+&lt;!&ndash; JS &ndash;&gt;
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
+-->
