--- a/src/app/authentication/signup/signup.component.html
+++ b/src/app/authentication/signup/signup.component.html
@@ -4,13 +4,13 @@
 
     <mat-form-field>
       <input matInput type="email" name="email" placeholder="E-Mail" ngModel email required autocomplete="current-email"
-             #emailInput="ngModel">
+        #emailInput="ngModel">
       <mat-error *ngIf="emailInput.invalid">E-Mail is a required field</mat-error>
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput type="password" name="password" placeholder="Password" ngModel required autocomplete="current-password"
-             #passwordInput="ngModel">
+      <input matInput type="password" name="password" placeholder="Password" ngModel required
+        autocomplete="current-password" #passwordInput="ngModel">
       <mat-error *ngIf="passwordInput.invalid">Password is a required field</mat-error>
     </mat-form-field>
 
