--- a/src/app/posts/post-list/post-list.component.css
+++ b/src/app/posts/post-list/post-list.component.css
@@ -1,6 +1,5 @@
 :host {
   display: block;
-  /* 1rem = 16px*/
   margin-top: 1rem;
 }
 
@@ -10,4 +9,14 @@
 
 mat-spinner {
   margin: auto;
+}
+
+.create-post-btn {
+  margin: 1rem;
+}
+
+.post-list {
+  width: 100%;
+  margin: 1rem auto;
+  padding: 1rem;
 }
