--- a/src/app/navigation/footer/footer.component.html
+++ b/src/app/navigation/footer/footer.component.html
@@ -1,3 +1,14 @@
+<body>
+<footer>
+  <mat-toolbar class="gold-toolbar footer">
+    <span class="mat-caption">Copyright © 2024 All rights reserved | Peter Gandy</span>
+  </mat-toolbar>
+</footer>
+</body>
+
+
+
+
 <!--
 <html lang="en">
 
